5708
```
$ qsc -Xgen-mixin-forwarders Test.scala
$ javac A.java
A.java:11: error: f() in Bip cannot implement f() in HasNewBuilder
  Bip<String> b2 = new Bip<String>() { };
                                     ^
  return type Builder<String,Bip<String>> is not compatible with Builder<String,Bip>
  where A#1,A#2,Repr are type-variables:
    A#1 extends Object declared in class Bip
    A#2 extends Object declared in interface HasNewBuilder
    Repr extends Object declared in interface HasNewBuilder
1 error
```
